# infracommand

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  grid.config.example.json  infracommand.py  pyproject.toml  requirements.txt  window_utils.py  window_utils_README.md
.githooks/: pre-commit
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
scripts/: Baseline.ps1  Baseline_Advanced.ps1  CacheReset.ps1  Environment_Scanner_Fast.ps1  FSLogixHealth.ps1  FSLogixShowMount.ps1  OmnissaAgentHealth.ps1  OmnissaSessionInfo.ps1  OutlookHealth.ps1  OutlookProfileReset.ps1  README_Baseline.md  README_ServiceNow.md  ServiceNow-Search.ps1  TeamsHealth.ps1  TeamsReset.ps1
