[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-command"
version = "0.1.0"
description = "InfraCommand – a Windows support cockpit (grid launcher, placement, logging)."
authors = [{ name = "Lukas Pfister" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["windows", "support", "admin", "qt", "pyside6"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/yourusername/InfraCommand"
Issues = "https://github.com/yourusername/InfraCommand/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6.9",
  "black>=24.8",
  "build>=1.2",
  "pre-commit>=3.8"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
fix = true
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["tests/"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]